[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/TovariSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Menu.tres" type="Theme" id=2]
[ext_resource path="res://Menus/InGameMenu/InGameMenu.gd" type="Script" id=3]
[ext_resource path="res://Menus/InGameMenu/PauseSubmenu.gd" type="Script" id=4]
[ext_resource path="res://Menus/InGameMenu/QuitVerifySubmenu.gd" type="Script" id=5]
[ext_resource path="res://Menus/InGameMenu/SwitchMenuButton.gd" type="Script" id=7]
[ext_resource path="res://Menus/InGameMenu/QuitGameButton.gd" type="Script" id=8]
[ext_resource path="res://Menus/InGameMenu/MusicVolumeSlider.gd" type="Script" id=9]
[ext_resource path="res://Menus/InGameMenu/SfxVolumeSlider.gd" type="Script" id=10]
[ext_resource path="res://sfx/StartScreen-Theme.ogg" type="AudioStream" id=11]
[ext_resource path="res://sfx/collectstarpiece.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeToBlackLayer/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeToBlackLayer/FadeToBlack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:pause_child")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FadeToBlackLayer/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeToBlackLayer/FadeToBlack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:pause_child")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeToBlackLayer/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeToBlackLayer/FadeToBlack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:pause_child")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="InGameMenuLayer" type="CanvasLayer"]
layer = 5

[node name="InGameMenu" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 512.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
default_screen_path = NodePath("PauseSubmenu")

[node name="TransparentBG" type="ColorRect" parent="InGameMenu"]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 0.705882 )

[node name="PauseSubmenu" type="MarginContainer" parent="InGameMenu"]
margin_right = 640.0
margin_bottom = 512.0
script = ExtResource( 4 )
first_focus_path = NodePath("CenterContainer/VBoxContainer/ReturnToGameButton")

[node name="CenterContainer" type="CenterContainer" parent="InGameMenu/PauseSubmenu"]
margin_right = 640.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -425.13, 56.991 )

[node name="VBoxContainer" type="VBoxContainer" parent="InGameMenu/PauseSubmenu/CenterContainer"]
margin_left = 247.0
margin_top = 179.0
margin_right = 393.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 22.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToGameButton" type="Button" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 146.0
margin_bottom = 48.0
text = "Return To Game"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_control_path = NodePath("../../../..")

[node name="MusicVolumeLabel" type="Label" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 146.0
margin_bottom = 68.0
text = "Music Volume:"
align = 1

[node name="MusicVolumeSlider" type="HSlider" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer" groups=[
"InGameVolumeSliders",
]]
margin_top = 72.0
margin_right = 146.0
margin_bottom = 88.0
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
script = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider"]
stream = ExtResource( 11 )
bus = "Music"

[node name="SfxVolumeLabel" type="Label" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 146.0
margin_bottom = 108.0
text = "Sound Effect Volume:"
align = 1

[node name="SfxVolumeSlider" type="HSlider" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer" groups=[
"InGameVolumeSliders",
]]
margin_top = 112.0
margin_right = 146.0
margin_bottom = 128.0
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
script = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/SfxVolumeSlider"]
stream = ExtResource( 12 )
bus = "Sfx"

[node name="QuitButton" type="Button" parent="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 146.0
margin_bottom = 154.0
text = "Quit"
script = ExtResource( 7 )
menu_control_path = NodePath("../../../..")
target_path = NodePath("../../../../QuitVerifySubmenu")

[node name="QuitVerifySubmenu" type="MarginContainer" parent="InGameMenu"]
visible = false
margin_right = 640.0
margin_bottom = 512.0
script = ExtResource( 5 )
first_focus_path = NodePath("CenterContainer/VBoxContainer/HBoxContainer/NoButton")
menu_parent_path = NodePath("../PauseSubmenu")

[node name="CenterContainer" type="CenterContainer" parent="InGameMenu/QuitVerifySubmenu"]
margin_right = 640.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -425.13, 56.991 )

[node name="VBoxContainer" type="VBoxContainer" parent="InGameMenu/QuitVerifySubmenu/CenterContainer"]
margin_left = 214.0
margin_top = 235.0
margin_right = 425.0
margin_bottom = 277.0

[node name="Label" type="Label" parent="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer"]
margin_right = 189.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "Are you sure you want to quit?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 189.0
margin_bottom = 39.0
alignment = 1

[node name="QuitGameButton" type="Button" parent="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 94.0
margin_bottom = 20.0
text = "Yes"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 128.0
margin_bottom = 20.0
text = "No"
script = ExtResource( 7 )
menu_control_path = NodePath("../../../../..")
target_path = NodePath("../../../../../PauseSubmenu")

[node name="FadeToBlackLayer" type="CanvasLayer" parent="InGameMenu"]
layer = 8

[node name="FadeToBlack" type="ColorRect" parent="InGameMenu/FadeToBlackLayer"]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="InGameMenu"]
anims/fade = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/unfade = SubResource( 4 )
[connection signal="pressed" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/ReturnToGameButton" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/ReturnToGameButton" method="_on_pressed"]
[connection signal="focus_entered" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" method="_on_MusicVolumeSlider_focus_entered"]
[connection signal="focus_exited" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" method="_on_MusicVolumeSlider_focus_exited"]
[connection signal="value_changed" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/MusicVolumeSlider" method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/SfxVolumeSlider" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/SfxVolumeSlider" method="_on_SfxVolumeSlider_value_changed"]
[connection signal="pressed" from="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/QuitButton" to="InGameMenu/PauseSubmenu/CenterContainer/VBoxContainer/QuitButton" method="_on_pressed"]
[connection signal="pressed" from="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer/QuitGameButton" to="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer/QuitGameButton" method="_on_QuitGameButton_pressed"]
[connection signal="pressed" from="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer/NoButton" to="InGameMenu/QuitVerifySubmenu/CenterContainer/VBoxContainer/HBoxContainer/NoButton" method="_on_pressed"]
[connection signal="animation_finished" from="InGameMenu/AnimationPlayer" to="InGameMenu" method="_on_AnimationPlayer_animation_finished"]
